--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -63,6 +63,12 @@ app-card {
   width: 100%;
 }
 
+@media (max-width: 350px) {
+  .info p {
+    font-size: 0.813rem;
+  }
+}
+
 @media (min-width: 1000px) {
   .container {
     display: grid;
@@ -78,7 +84,7 @@ app-card {
     align-items: flex-start;
     height: 100%;
     justify-content: flex-start;
-    gap: 30px;
+    gap: 1.875rem;
   }
 
   .time {
@@ -100,7 +106,7 @@ app-card {
   }
 
   .info h1 {
-    font-size: 35px;
+    font-size: 2.188rem;
     margin-bottom: 1rem;
   }
 
