--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,7 +50,7 @@ p {
   padding: .5rem;
 }
 
-.t {
+.time-frame {
   cursor: pointer;
   color: var(--Desaturated-blue);
 }
@@ -63,9 +63,64 @@ app-card {
   width: 100%;
 }
 
+.two {
+  border-radius: 15px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  width: 100%;
+}
+
+.icon {
+  padding: 1.5rem;
+  width: 100%;
+  background: no-repeat right 5% top;
+}
+
+.stats {
+  background-color: var(--Dark-blue);
+  width: 100%;
+  border-radius: 15px;
+  padding: 2rem 1.5rem;
+}
+
+.activity, .hours {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.activity img {
+  cursor: pointer;
+}
+
+.stats p, h1 {
+  margin: 0;
+  color: white;
+  font-weight: 500;
+}
+
+h1 {
+  font-weight: 300;
+  font-size: 2rem;
+}
+
+span {
+  color: var(--Pale-Blue);
+}
+
 @media (max-width: 350px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
   .info p {
     font-size: 0.813rem;
+  }
+
+  .hours {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
@@ -101,6 +156,28 @@ app-card {
     justify-content: space-between;
   }
 
+  .hours {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .activity {
+    margin-bottom: 1rem;
+  }
+
+  span {
+    font-size: 0.813rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .stats:hover {
+    cursor: pointer;
+    background-color: hsla(236, 45%, 20%, 0.7);
+  }
+
   .info p {
     font-size: 1rem;
   }
@@ -110,38 +187,7 @@ app-card {
     margin-bottom: 1rem;
   }
 
-  .t {
+  .time-frame {
     margin: .5rem 0;
   }
-
-  .work {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-
-  .play {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-  }
-
-  .study {
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
-  }
-
-  .exercise {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-
-  .self-care {
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
-  }
-
-  .social {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-  }
-
 }
